; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_CleanupTransaction.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_xact.c_CleanupTransaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i64, i64, i32*, i64, i64, i32, i8*, i32* }

@CurrentTransactionState = common dso_local global %struct.TYPE_3__* null, align 8
@TRANS_ABORT = common dso_local global i64 0, align 8
@FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"CleanupTransaction: unexpected state %s\00", align 1
@CurrentResourceOwner = common dso_local global i32* null, align 8
@TopTransactionResourceOwner = common dso_local global i32* null, align 8
@CurTransactionResourceOwner = common dso_local global i32* null, align 8
@InvalidFullTransactionId = common dso_local global i8* null, align 8
@InvalidSubTransactionId = common dso_local global i32 0, align 4
@XactTopFullTransactionId = common dso_local global i8* null, align 8
@nParallelCurrentXids = common dso_local global i64 0, align 8
@TRANS_DEFAULT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CleanupTransaction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CleanupTransaction() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** @CurrentTransactionState, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %1, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @TRANS_ABORT, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %0
  %9 = load i32, i32* @FATAL, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @TransStateAsString(i64 %12)
  %14 = call i32 @elog(i32 %9, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %8, %0
  %16 = call i32 (...) @AtCleanup_Portals()
  %17 = call i32 @AtEOXact_Snapshot(i32 0, i32 1)
  store i32* null, i32** @CurrentResourceOwner, align 8
  %18 = load i32*, i32** @TopTransactionResourceOwner, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %15
  %21 = load i32*, i32** @TopTransactionResourceOwner, align 8
  %22 = call i32 @ResourceOwnerDelete(i32* %21)
  br label %23

23:                                               ; preds = %20, %15
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 9
  store i32* null, i32** %25, align 8
  store i32* null, i32** @CurTransactionResourceOwner, align 8
  store i32* null, i32** @TopTransactionResourceOwner, align 8
  %26 = call i32 (...) @AtCleanup_Memory()
  %27 = load i8*, i8** @InvalidFullTransactionId, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 8
  store i8* %27, i8** %29, align 8
  %30 = load i32, i32* @InvalidSubTransactionId, align 4
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 7
  store i32 %30, i32* %32, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 6
  store i64 0, i64* %34, align 8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 5
  store i64 0, i64* %36, align 8
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 4
  store i32* null, i32** %38, align 8
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 3
  store i64 0, i64* %40, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 2
  store i64 0, i64* %42, align 8
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 1
  store i64 0, i64* %44, align 8
  %45 = load i8*, i8** @InvalidFullTransactionId, align 8
  store i8* %45, i8** @XactTopFullTransactionId, align 8
  store i64 0, i64* @nParallelCurrentXids, align 8
  %46 = load i64, i64* @TRANS_DEFAULT, align 8
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 0
  store i64 %46, i64* %48, align 8
  ret void
}

declare dso_local i32 @elog(i32, i8*, i32) #1

declare dso_local i32 @TransStateAsString(i64) #1

declare dso_local i32 @AtCleanup_Portals(...) #1

declare dso_local i32 @AtEOXact_Snapshot(i32, i32) #1

declare dso_local i32 @ResourceOwnerDelete(i32*) #1

declare dso_local i32 @AtCleanup_Memory(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
